--- a/packages/dnb-eufemia/src/elements/hr/style/hr-mixins.scss
+++ b/packages/dnb-eufemia/src/elements/hr/style/hr-mixins.scss
@@ -3,9 +3,10 @@
 @mixin hrStyle() {
   position: relative;
   padding: 0;
+  width: 100%; // when nested in a flex container, we need this.
   height: 0;
 
-  display: flex;
+  display: flow-root; // avoid margin collapsing on Safari
 
   &:not([class*='dnb-space']) {
     margin: 0;
@@ -16,17 +17,14 @@
   &::after {
     content: '';
     position: absolute;
+    inset: 0;
     z-index: 1;
-    left: 0;
-    right: 0;
-    top: 0;
 
-    width: 100%;
-    height: 1px;
+    height: var(--thickness);
 
     color: inherit;
     background-color: currentcolor;
-    border-radius: 0.5px;
+    border-radius: calc(var(--thickness) / 2);
   }
 }
 
